Replace HttpURLConnection with WebSocketClient